--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,3 @@
-use global colors
-
-.main-menu {
-  
-}
 
 .card-view, .results {
   display: none;
@@ -12,10 +7,11 @@ use global colors
   border-color: black;
 }
 
-.answer.correct {
+.answers.correct {
  background-color: green;
 }
 
-.answer.wrong {
+
+.answers.wrong {
  background-color: red;
 }
