--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,50 @@ body {
   height: 100vh;
   margin-left: 60px;
   margin-right: 60px;
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1, h2, h3, p, button {
+  font-family: 'Merriweather Sans', sans-serif;
+  display: flex;
+}
+
+
+
+h1 {
+  text-align: center;
+  position: relative;
+}
+
+p {
+  margin-bottom: 10px;
+}
+
+.card-view, .results {
+  display: none;
+}
+
+.answer:hover {
+  border-color: black;
+}
+
+.answers.correct {
+ background-color: green;
+}
+
+.answers.wrong {
+ background-color: red;
+}
+
+body {
+  font-family: 'Merriweather Sans', sans-serif;
+  box-sizing: border-box;
+  height: 100vh;
+  margin-left: 60px;
+  margin-right: 60px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,6 +72,8 @@ h1, h2, h3, p, button {
   font-family: 'Merriweather Sans', sans-serif;
   
 }
+
+
 
 h1 {
   text-align: center;
@@ -43,13 +88,32 @@ p {
   text-align: left;
   margin: end;
 }
-
+/* 
 .region-buttons {
   display: grid;
   margin-top: 20px;
   grid-template-columns: repeat(3, 1fr);
   gap: 15px;
 }
+
+.answers {
+  display: grid;
+  font-size: 20px;
+  width: 200px;
+  height: 60px;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 15px;
+}
+
+.next {
+  display: grid;
+  font-size: 20px;
+  width: 200px;
+  height: 60px;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 15px;
+}
+
 
 .region-btn {
   font-size: 20px;
@@ -87,7 +151,7 @@ p {
   cursor: pointer; 
   transition: 0.2s all;
   pointer-events: auto;
-}
+} */
 
 .error-message {
   display: none;
@@ -97,20 +161,3 @@ p {
   color: var(--brand-color);
 }
 
-
-.card-view, .results {
-  display: none;
-}
-
-.answer:hover {
-  border-color: black;
-}
-
-.answers.correct {
- background-color: green;
-}
-
-
-.answers.wrong {
- background-color: red;
-}
