--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,17 +37,25 @@ main {
   margin-top: 40px;
 }
 
+.main-menu {
+  flex-direction: column;
+}
+
 h1 {
   text-align: center;
   position: relative;
 }
 
-p {
-  margin-bottom: 10px;
+.intro-paragraph {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  margin-left: 40px;
 }
 
 .card-view, .results {
   display: none;
+  flex-direction: column;
 }
 
 .answer:hover {
@@ -68,9 +76,8 @@ p {
   color: var(--brand-color);
 }
 
-
+/* global button styles (collapsed) */
 button {
-    display:inline-block;
     cursor: pointer;
     border-radius: 4px;
     font-size: 14px;
@@ -103,7 +110,6 @@ button:hover {
 }
 
 .div-play {
-  
   display: flex;
   justify-content: center; 
   align-items: center; 
@@ -124,52 +130,33 @@ button:hover {
   background-color: var(--blue-accent1);
 }
 
+.close {
+  display: flex;
+  align-items: end;
+  justify-content: right;
+}
 
+.close-btn {
+  margin: 0 5px 10px 0;
+}
 
-/* 
-button {
-  display:inline-block;
-  outline: none;
-  cursor: pointer;
-  border-radius: 80px;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 16px;
-  padding: 2px 16px;
-  height: 38px;
-  min-width: 96px;
-  min-height: 38px;
-  border: none;
-  color: #fff;
-  background-color: var(--blue-accent1);
-  transition: background-color .17s ease,color .17s ease;
-  :hover {
-      background-color: rgb(71, 82, 196);
-  }
+h2 {
+  text-align: center;
+  position: relative;
+}
 
-  
-  } */
-  
+.answers-grid {
+  display: grid;
+  grid-template-columns: repeat(2, auto); 
+  gap: 20px;
+  margin: 20px 0;
+  align-items: center;
+  justify-content: center;
+}
 
-/* 
-display: inline-block;
-outline: 0;
-cursor: pointer;
-border: none;
-padding: 0 56px;
-height: 45px;
-line-height: 45px;
-border-radius: 7px;
-background-color: #0070f3;
-color: white;
-font-weight: 400;
-font-size: 16px;
-box-shadow: 0 4px 14px 0 rgb(0 118 255 / 39%);
-transition: background 0.2s ease,color 0.2s ease,box-shadow 0.2s ease;
-:hover{
-    background: rgba(0,118,255,0.9);
-    box-shadow: 0 6px 20px rgb(0 118 255 / 23%); */
-
-button:hover {
-
+.answers-grid button {
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%; 
 }
