--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,18 +7,20 @@
   --orange: #F97A1F;
   --off-black: #1A1A1A;
   --greyscale:#F2F2F2;
-  --wrong-color: #F6423C;
-  --correct-color: #1DC9A4;
+  --red-color: #E2365B;
   --green-color: #50c878;
   /* colors borrowed from The Economist Design System - https://design-system.economist.com/foundations/colour/palettes#accent-primary */
 }
 
 body {
+  display: flex;
   font-family: 'Merriweather Sans', sans-serif;
   height: 100vh;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
+  height: 100%;
+  overflow: hidden;
 }
 
 main {
@@ -44,6 +46,7 @@ main {
 h1 {
   text-align: center;
   position: relative;
+  font-size: 34px;
 }
 
 .intro-paragraph {
@@ -55,17 +58,33 @@ h1 {
 
 .card-view, .results {
   display: none;
-  flex-direction: column;
 }
+
+.answers-grid {
+  display: grid;
+  grid-template-columns: repeat(2, auto); 
+  gap: 10px;
+  margin: 20px 0;
+}
+
+.next {
+  display: flex;
+  justify-content: center;
+}
+
+/* #next {
+  justify-content: center;
+  align-items: center;
+} */
 
 .answer:hover {
   border-color: black;
 }
 .answers.correct {
- background-color: green;
+ background-color: var(--green-color);
 }
 .answers.wrong {
- background-color: red;
+ background-color: var(--red-color);
 }
 
 .error-message {
@@ -134,29 +153,16 @@ button:hover {
   display: flex;
   align-items: end;
   justify-content: right;
+  border-width: 4px;
 }
 
 .close-btn {
   margin: 0 5px 10px 0;
+  background-color: var(--green-color);
+
 }
 
 h2 {
   text-align: center;
   position: relative;
-}
-
-.answers-grid {
-  display: grid;
-  grid-template-columns: repeat(2, auto); 
-  gap: 20px;
-  margin: 20px 0;
-  align-items: center;
-  justify-content: center;
-}
-
-.answers-grid button {
-  white-space: normal;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 100%; 
 }
