--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,16 @@
 
 :root{
   --brand-color: #E3120B;
-  --blue-accent1: #141F52;
-  --blue-accent2: #2E45B8;
-  --blue-accent3: #475ED1;
-  --orange: #F97A1F;
+  --green-accent1: #386641;
+  --green-accent2: #6A994E;
+  --green-accent3: #386641;
+  --green-accent4:#D6DBF5;
   --off-black: #1A1A1A;
   --greyscale:#F2F2F2;
-  --red-color: #E2365B;
-  --green-color: #50c878;
-  /* colors borrowed from The Economist Design System - https://design-system.economist.com/foundations/colour/palettes#accent-primary */
+  --red-color: #BC4749;
+  --off-red:  #b7696a;
+  --green-color: #386641;
+  --off-green-color: #3866418a;
 }
 
 body {
@@ -67,24 +68,32 @@ h1 {
   margin: 20px 0;
 }
 
+.answers {
+  background-color: var(--greyscale);
+  color: var(--off-black);
+}
+
+.answers:hover{
+  box-shadow: 2px 8px 12px rgba(0, 0, 0, 0.5);
+  background-color: var(--greyscale);
+  color: var(--off-black);
+
+}
+
 .next {
   display: flex;
   justify-content: center;
 }
 
-/* #next {
-  justify-content: center;
-  align-items: center;
-} */
-
-.answer:hover {
-  border-color: black;
-}
 .answers.correct {
- background-color: var(--green-color);
+ border: 4px solid var(--green-color);
+ background-color: var(--off-green-color);
+ color: var(--off-black);
+ /* background-color: var(--green-color); */
 }
 .answers.wrong {
- background-color: var(--red-color);
+ border: 4px solid var(--brand-color);
+ color: var(--off-black);
 }
 
 .error-message {
@@ -98,7 +107,10 @@ h1 {
 /* global button styles (collapsed) */
 button {
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 6px;
+    border: 4px solid var(--off-black);
+    background-color: var(--greyscale);
+    color: var(--off-black);
     font-size: 14px;
     font-weight: 600;
     line-height: 16px;
@@ -107,27 +119,13 @@ button {
     height: 38px;
     min-width: 136px;
     min-height: 38px;
-    border: none;
-    color: #fff;
-    background-color: var(--blue-accent2);
     transition: background-color .17s ease,color .17s ease;
-    
-}
-button:hover {
-    background-color: var(--blue-accent3);
 }
 
-.region-buttons {
-  display: grid;
-  grid-template-columns: repeat(2, auto); 
-  gap: 10px;
-  margin: 20px 0;
+button.clicked {
+  color: var(--greyscale);
+  background-color: var(--green-accent3);
 }
-
-.region-btn.clicked {
-  background-color: var(--blue-accent1);
-}
-
 .div-play {
   display: flex;
   justify-content: center; 
@@ -137,16 +135,47 @@ button:hover {
 }
 
 .play-btn {
-  background-color: var(--blue-accent3);
+  border: 4px solid var(--off-black);
+  border-radius: 10px;
+  background-color: var(--greyscale);
+  color: var(--green-accent2);
+  cursor:not-allowed;
   height: 48px;
   min-width: 236px;
   min-height: 38px;
   font-size: 24px;
-  font-weight: 500;
-
+  font-weight: 600;
+  transition: background-color .17s ease,color .17s ease;
 }
+/* 
+border: 4px solid var(--green-accent3);
+border-radius: 10px;
+background-color: var(--green-accent3);
+color: var(--greyscale);
+cursor: pointer;
+ */
+
+/* 
+border: 4px solid var(--green-accent2);
+border-radius: 10px;
+background-color: var(--green-accent3);
+cursor: pointer;
+ */
+
+.region-buttons {
+  display: grid;
+  grid-template-columns: repeat(2, auto); 
+  gap: 10px;
+  margin: 20px 0;
+}
+
+.region-btn.clicked {
+  background-color: var(--green-accent3);
+}
+
 button:hover {
-  background-color: var(--blue-accent1);
+  background-color: var(--green-accent3);
+  color: var(--greyscale);
 }
 
 .close {
@@ -158,11 +187,31 @@ button:hover {
 
 .close-btn {
   margin: 0 5px 10px 0;
-  background-color: var(--green-color);
+  min-width: 96px;
+  color: var(--green-accent1);
+  border: 2px solid var(--green-accent3);
+}
 
+.close-btn:active {
+  background-color: var(--greyscale);
+  border: 3px solid var(--green-accent4);
 }
 
 h2 {
   text-align: center;
   position: relative;
+}
+
+.results {
+
+  display: flex;
+  justify-content: center;
+  margin: 0 25%;
+  height: 400px;
+
+}
+
+.play-again {
+max-width: 15%;
+margin: 20%;
 }
