--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,9 +57,14 @@ h1 {
   margin-left: 40px;
 }
 
-.card-view, .results {
+.card-view {
   display: none;
 }
+
+.results {
+display: none;
+}
+/* add ID the results so it is marked as important */
 
 .answers-grid {
   display: grid;
@@ -77,7 +82,6 @@ h1 {
   box-shadow: 2px 8px 12px rgba(0, 0, 0, 0.5);
   background-color: var(--greyscale);
   color: var(--off-black);
-
 }
 
 .next {
@@ -203,11 +207,9 @@ h2 {
 }
 
 .results {
-  display: flex;
   justify-content: center;
   margin: 0 25%;
   height: 400px;
-
 }
 
 .play-again {
