--- a/styles/styles.css
+++ b/styles/styles.css
@@ -88,7 +88,6 @@ display: none;
  border: 4px solid var(--green-color);
  background-color: var(--off-green-color);
  color: var(--off-black);
- /* background-color: var(--green-color); */
 }
 .answers.wrong {
  border: 4px solid var(--brand-color);
@@ -103,7 +102,6 @@ display: none;
   color: var(--brand-color);
 }
 
-/* global button styles (collapsed) */
 button {
     cursor: pointer;
     border-radius: 6px;
@@ -187,8 +185,12 @@ h2 {
   position: relative;
 }
 
+.country-flag {
+  font-size: 32px;
+}
+
 .results {
-  display: flex;
+  
   flex-direction: column;
   justify-content: center;
   margin: 0 25%;
